--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,13 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
+       environment:
+        BUNDLER_VERSION: 2.0.1
     executor: ruby/default
     steps:
       - checkout
       - run:
           name: Which bundler?
-          command: bundle -v
+          command: gem install bundler
+          bundle -v
       - ruby/bundle-install
