--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,5 +13,5 @@ jobs:
       - run:
           name: Which bundler?
           command: gem install bundler
-          bundle -v
+          #bundle -v
       - ruby/bundle-install
