Add fix for bundler version 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,12 @@ references:
           POSTGRES_DB:
           POSTGRES_PASSWORD: ""
   check_bundler_verson: &check_bundler_verson
-    run:
-      name: Which bundler?
-      command: gem install bundler
+     run:
+      name: Configure Bundler
+      command: |
+        echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+        source $BASH_ENV
+        gem install bundler
 
   run_specs: &run_specs
     run:
